@@ -1,3 +1,9 @@
+2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-13-03
+	* adjust WebGUI to instantiate the monitorable infospace of an
+	application the xdaq3.9 way.
+
 2007-04-16  Emilio Meschi <emilio.meschi@cern.ch>
 
 	* tag V00-13-00
